<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:visibility="invisible"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginRight="14dp"
    android:layout_marginBottom="14dp"
    android:layout_marginLeft="14dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/flagLate"
            android:onClick="onClick"
            android:background="@color/primaryLight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_margin"
            android:layout_marginBottom="@dimen/spacer_margin"
            android:layout_marginLeft="@dimen/spacer_margin"
            android:layout_marginRight="@dimen/spacer_margin"
            android:text="@string/flag_late"/>
        <Button
            android:id="@+id/flagEarly"
            android:onClick="onClick"
            android:background="@color/primaryLight"
            android:layout_below="@+id/flagLate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacer_margin"
            android:layout_marginLeft="@dimen/spacer_margin"
            android:layout_marginRight="@dimen/spacer_margin"
            android:text="@string/flag_early"/>
        <Button
            android:id="@+id/flagDirty"
            android:onClick="onClick"
            android:background="@color/primaryLight"
            android:layout_below="@+id/flagEarly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacer_margin"
            android:layout_marginLeft="@dimen/spacer_margin"
            android:layout_marginRight="@dimen/spacer_margin"
            android:text="@string/flag_dirty"/>
        <Button
            android:id="@+id/flagCrowded"
            android:onClick="onClick"
            android:background="@color/primaryLight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flagDirty"
            android:layout_marginBottom="@dimen/spacer_margin"
            android:layout_marginLeft="@dimen/spacer_margin"
            android:layout_marginRight="@dimen/spacer_margin"
            android:text="@string/flag_crowded"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>