<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"

    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    fab:menu_icon="@drawable/ic_arrow_drop_down"
    fab:fab_progress_max="180"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    fab:menu_colorNormal="@color/primary"
    fab:menu_colorPressed="@color/primaryDark"
    fab:menu_colorRipple="@color/primaryDark"
    android:elevation="6dp"
    fab:menu_labels_ellipsize="end"
    fab:menu_labels_singleLine="true">

    <com.example.adam.pubtrans.views.SelectableFloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:selectable="true"
        android:src="@drawable/ic_directions_transit_white"
        fab:menu_colorNormal="@color/primary"
        fab:menu_colorPressed="@color/primaryDark"
        fab:menu_colorRipple="@color/primaryDark"
        android:tag="tram"
        fab:fab_size="mini"
        fab:fab_label="@string/tram" />

    <com.example.adam.pubtrans.views.SelectableFloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:selectable="true"
        android:src="@drawable/ic_directions_bus_white"
        fab:menu_colorNormal="@color/primary"
        fab:menu_colorPressed="@color/primaryDark"
        fab:menu_colorRipple="@color/primaryDark"
        android:tag="bus"
        fab:fab_size="mini"
        fab:fab_label="@string/bus" />

    <com.example.adam.pubtrans.views.SelectableFloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:selectable="true"
        android:src="@drawable/ic_directions_train_white"
        fab:menu_colorNormal="@color/primary"
        fab:menu_colorPressed="@color/primaryDark"
        fab:menu_colorRipple="@color/primaryDark"
        fab:fab_size="mini"
        android:tag="train"
        fab:fab_label="@string/train" />

</com.github.clans.fab.FloatingActionMenu>